--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,24 @@
   <title>proxyfor.me</title>
   <base href="/">
 
+  <meta property="og:url" content="https://www.proxyfor.me/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="proxyfor.me: Democracy Solved">
+  <meta property="og:description" content="Let’s create a world without politicians, where public policy decisions reflect the
+  will of ALL the people, not just the powerful or politically active. And all it takes is a a minute of your time to
+  get you a lifetime of quality representation.">
+  <meta property="og:image" content="http://www.proxyfor.me/proxyfor-me.png">
+  <meta property="og:site_name" content="proxyfor.me">
+  <meta property="fb:app_id" content="966242223397117" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@proxyfor_me">
+  <meta name="twitter:creator" content="@proxyfor_me">
+  <meta name="twitter:title" content="proxyfor.me: Democracy Solved">
+  <meta name="twitter:description" content="Let’s create a world without politicians, and all it takes is a minute to
+  get you a lifetime of quality representation.">
+  <meta name="twitter:image" content="http://www.proxyfor.me/proxyfor-me.png">
+  <meta name="twitter:image:alt" content="proxyfor.me screenshot">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
